Implemented function declarations. Made for-loop grammar less jank

--- a/odb-compiler/CMakeLists.txt
+++ b/odb-compiler/CMakeLists.txt
@@ -106,6 +106,7 @@ add_library (odb-compiler ${ODBCOMPILER_LIB_TYPE}
     "src/ast/Expression.cpp"
     "src/ast/ExpressionList.cpp"
     "src/ast/FuncCall.cpp"
+    "src/ast/FuncDecl.cpp"
     "src/ast/Keyword.cpp"
     "src/ast/Literal.cpp"
     "src/ast/Loop.cpp"
@@ -159,7 +160,7 @@ if (${ODBCOMPILER_TESTS})
         # "tests/src/test_db_conditional.cpp"
         "tests/src/test_db_constant.cpp"
         "tests/src/test_db_func_call.cpp"
-        # "tests/src/test_db_func_decl.cpp"
+        "tests/src/test_db_func_decl.cpp"
         # "tests/src/test_db_goto.cpp"
         "tests/src/test_db_keyword.cpp"
         "tests/src/test_db_loop_do.cpp"
