--- a/odb-compiler/CMakeLists.txt
+++ b/odb-compiler/CMakeLists.txt
@@ -69,21 +69,21 @@ if (ODBCOMPILER_VERBOSE_BISON)
     set_property (
         SOURCE
             ${BISON_DarkBASICParser_OUTPUTS}
-            ${BISON_KeywordsParser_OUTPUTS}
+            ${BISON_CommandsParser_OUTPUTS}
         PROPERTY COMPILE_DEFINITIONS
             YYDEBUG)
 endif ()
 
-gperf_target (DarkBASICKeywordToken
+gperf_target (DarkBASICCommandToken
     "${PROJECT_SOURCE_DIR}/src/parsers/db/KeywordToken.gperf"
     "${PROJECT_BINARY_DIR}/src/parsers/db/KeywordToken.gperf.cpp")
-set_source_files_properties (${Gperf_DarkBASICKeywordToken_OUTPUTS}
+set_source_files_properties (${Gperf_DarkBASICCommandToken_OUTPUTS}
     PROPERTIES COMPILE_FLAGS
         $<$<CXX_COMPILER_ID:GNU>:-Wno-missing-field-initializers>
         $<$<CXX_COMPILER_ID:Clang>:-Wno-missing-field-initializers>
         $<$<CXX_COMPILER_ID:AppleClang>:-Wno-missing-field-initializers>)
 #XXX this is broken
-add_gperf_bison_dependency (DarkBASICKeywordToken DarkBASICParser)
+add_gperf_bison_dependency (DarkBASICCommandToken DarkBASICParser)
 
 ###############################################################################
 # Library definition
@@ -92,9 +92,9 @@ add_gperf_bison_dependency (DarkBASICKeywordToken DarkBASICParser)
 add_library (odb-compiler ${ODBCOMPILER_LIB_TYPE}
     ${BISON_DarkBASICParser_OUTPUTS}
     ${FLEX_DarkBASICScanner_OUTPUTS}
-    ${Gperf_DarkBASICKeywordToken_OUTPUTS}
-    ${BISON_KeywordsParser_OUTPUTS}
-    ${FLEX_KeywordsScanner_OUTPUTS}
+    ${Gperf_DarkBASICCommandToken_OUTPUTS}
+    ${BISON_CommandsParser_OUTPUTS}
+    ${FLEX_CommandsScanner_OUTPUTS}
     "src/ast/ArrayRef.cpp"
     "src/ast/Assignment.cpp"
     "src/ast/BinaryOp.cpp"
@@ -108,7 +108,7 @@ add_library (odb-compiler ${ODBCOMPILER_LIB_TYPE}
     "src/ast/ExpressionList.cpp"
     "src/ast/FuncCall.cpp"
     "src/ast/FuncDecl.cpp"
-    "src/ast/Keyword.cpp"
+    "src/ast/Command.cpp"
     "src/ast/Literal.cpp"
     "src/ast/Loop.cpp"
     "src/ast/Node.cpp"
@@ -120,12 +120,12 @@ add_library (odb-compiler ${ODBCOMPILER_LIB_TYPE}
     "src/ast/VarDecl.cpp"
     "src/ast/VarRef.cpp"
     "src/ast/Visitor.cpp"
-    "src/keywords/KeywordLoader.cpp"
-    "src/keywords/ODBKeywordLoader.cpp"
-    "src/keywords/DBPKeywordLoader.cpp"
-    "src/keywords/Keyword.cpp"
-    "src/keywords/KeywordIndex.cpp"
-    "src/keywords/KeywordMatcher.cpp"
+    "src/commands/CommandLoader.cpp"
+    "src/commands/ODBCommandLoader.cpp"
+    "src/commands/DBPCommandLoader.cpp"
+    "src/commands/Command.cpp"
+    "src/commands/CommandIndex.cpp"
+    "src/commands/CommandMatcher.cpp"
     "src/parsers/db/Driver.cpp"
     "src/parsers/db/ErrorPrinter.cpp")
 target_include_directories (odb-compiler
@@ -163,7 +163,7 @@ if (${ODBCOMPILER_TESTS})
         "tests/src/test_db_func_call.cpp"
         "tests/src/test_db_func_decl.cpp"
         # "tests/src/test_db_goto.cpp"
-        "tests/src/test_db_keyword.cpp"
+        "tests/src/test_db_command.cpp"
         "tests/src/test_db_loop_do.cpp"
         "tests/src/test_db_loop_for.cpp"
         "tests/src/test_db_loop_repeat.cpp"
@@ -177,8 +177,8 @@ if (${ODBCOMPILER_TESTS})
         # "tests/src/test_db_udt.cpp"
         "tests/src/test_db_var_decl.cpp"
         "tests/src/test_db_var_ref.cpp"
-        # "tests/src/test_kw_index.cpp"
-        "tests/src/test_kw_matcher.cpp"
+        # "tests/src/test_cmd_index.cpp"
+        "tests/src/test_cmd_matcher.cpp"
         "tests/src/test_SourceLocation.cpp"
         "tests/src/ASTMatchers.cpp"
         "tests/src/ASTParentConsistenciesChecker.cpp"
