Fixed parser memory leaks

--- a/odb-compiler/CMakeLists.txt
+++ b/odb-compiler/CMakeLists.txt
@@ -101,7 +101,6 @@ add_library (odb-compiler ${ODBCOMPILER_LIB_TYPE}
     "src/ast/Block.cpp"
     "src/ast/Break.cpp"
     "src/ast/ConstDecl.cpp"
-    "src/ast/ErrorHighlighter.cpp"
     "src/ast/Exporters_DOT.cpp"
     "src/ast/Exporters_JSON.cpp"
     "src/ast/Expression.cpp"
@@ -112,14 +111,15 @@ add_library (odb-compiler ${ODBCOMPILER_LIB_TYPE}
     "src/ast/Literal.cpp"
     "src/ast/Loop.cpp"
     "src/ast/Node.cpp"
-    "src/ast/Process.cpp"
-    "src/ast/ResolveArrayFuncAmbiguity.cpp"
     "src/ast/SourceLocation.cpp"
     "src/ast/Statement.cpp"
     "src/ast/Symbol.cpp"
     "src/ast/VarDecl.cpp"
     "src/ast/VarRef.cpp"
     "src/ast/Visitor.cpp"
+    "src/astpost/ErrorHighlighter.cpp"
+    "src/astpost/Process.cpp"
+    "src/astpost/ResolveArrayFuncAmbiguity.cpp"
     "src/commands/CommandLoader.cpp"
     "src/commands/ODBCommandLoader.cpp"
     "src/commands/DBPCommandLoader.cpp"
