--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -24,11 +24,14 @@ jobs:
     - name: Build bison
       run: wget http://ftp.gnu.org/gnu/bison/bison-3.7.tar.gz && tar -zxvf bison-3.7.tar.gz && pushd bison-3.7/ && ./configure && sudo make install && popd
 
+    - name: Install packages
+      run: sudo apt update && sudo apt install gperf
+
     - name: Update packages
       run: sudo apt update && sudo apt --only-upgrade install flex
 
     - name: Versions
-      run: bison --version; flex --version
+      run: bison --version; flex --version; gperf --version
 
     # - name: Debugging with tmate
     #   # You may pin to the exact commit or the version.
