--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -25,7 +25,7 @@ jobs:
       run: wget http://ftp.gnu.org/gnu/bison/bison-3.7.tar.gz && tar -zxvf bison-3.7.tar.gz && pushd bison-3.7/ && ./configure && sudo make install && popd
 
     - name: Install packages
-      run: sudo apt update && sudo apt install gperf
+      run: sudo apt update && sudo apt install gperf valgrind
 
     - name: Update packages
       run: sudo apt update && sudo apt --only-upgrade install flex
@@ -66,3 +66,15 @@ jobs:
       working-directory: ${{runner.workspace}}/build
       shell: bash
       run: bin/odbc_tests
+
+    - name: valgrind
+      working-directory: ${{runner.workspace}}/build
+      shell: bash
+      run: |
+        valgrind --num-callers=50 \
+          --leak-resolution=high \
+          --leak-check=full \
+          --show-leak-kinds=all \
+          --track-origins=yes \
+          --time-stamp=yes \
+          ./bin/odbc_tests
