--- a/odb-compiler/CMakeLists.txt
+++ b/odb-compiler/CMakeLists.txt
@@ -113,6 +113,7 @@ add_library (odb-compiler ${ODBCOMPILER_LIB_TYPE}
     "src/ast/SourceLocation.cpp"
     "src/ast/Statement.cpp"
     "src/ast/Symbol.cpp"
+    "src/ast/UnaryOp.cpp"
     "src/ast/VarDecl.cpp"
     "src/ast/VarRef.cpp"
     "src/ast/Visitor.cpp"
@@ -168,8 +169,7 @@ if (${ODBCOMPILER_TESTS})
         "tests/src/test_db_loop_for.cpp"
         "tests/src/test_db_loop_repeat.cpp"
         "tests/src/test_db_loop_while.cpp"
-        "tests/src/test_db_op_add.cpp"
-        # "tests/src/test_db_op_precedence.cpp"
+        "tests/src/test_db_op_precedence.cpp"
         "tests/src/test_db_remarks.cpp"
         # "tests/src/test_db_select.cpp"
         # "tests/src/test_db_string_literal.cpp"
