--- a/odb-compiler/CMakeLists.txt
+++ b/odb-compiler/CMakeLists.txt
@@ -108,12 +108,15 @@ add_library (odb-compiler ${ODBCOMPILER_LIB_TYPE}
     "src/ast/ExpressionList.cpp"
     "src/ast/FuncCall.cpp"
     "src/ast/FuncDecl.cpp"
+    "src/ast/Goto.cpp"
     "src/ast/Increment.cpp"
+    "src/ast/Label.cpp"
     "src/ast/Literal.cpp"
     "src/ast/Loop.cpp"
     "src/ast/Node.cpp"
     "src/ast/SourceLocation.cpp"
     "src/ast/Statement.cpp"
+    "src/ast/Subroutine.cpp"
     "src/ast/Symbol.cpp"
     "src/ast/UnaryOp.cpp"
     "src/ast/VarDecl.cpp"
@@ -166,7 +169,7 @@ if (${ODBCOMPILER_TESTS})
         "tests/src/test_db_constant.cpp"
         "tests/src/test_db_func_call.cpp"
         "tests/src/test_db_func_decl.cpp"
-        # "tests/src/test_db_goto.cpp"
+        "tests/src/test_db_goto.cpp"
         "tests/src/test_db_inc_dec.cpp"
         "tests/src/test_db_loop_do.cpp"
         "tests/src/test_db_loop_for.cpp"
@@ -175,12 +178,11 @@ if (${ODBCOMPILER_TESTS})
         "tests/src/test_db_op_precedence.cpp"
         "tests/src/test_db_remarks.cpp"
         # "tests/src/test_db_select.cpp"
-        # "tests/src/test_db_string_literal.cpp"
-        # "tests/src/test_db_subroutine.cpp"
+        "tests/src/test_db_string_literal.cpp"
+        "tests/src/test_db_subroutine.cpp"
         # "tests/src/test_db_udt.cpp"
         "tests/src/test_db_var_decl.cpp"
         "tests/src/test_db_var_ref.cpp"
-        # "tests/src/test_cmd_index.cpp"
         "tests/src/test_cmd_matcher.cpp"
         "tests/src/test_SourceLocation.cpp"
         "tests/src/ASTMatchers.cpp"
