Conditional statements (if/then/elseif/else/endif)

--- a/odb-compiler/CMakeLists.txt
+++ b/odb-compiler/CMakeLists.txt
@@ -100,6 +100,7 @@ add_library (odb-compiler ${ODBCOMPILER_LIB_TYPE}
     "src/ast/Block.cpp"
     "src/ast/Break.cpp"
     "src/ast/Command.cpp"
+    "src/ast/Conditional.cpp"
     "src/ast/ConstDecl.cpp"
     "src/ast/Decrement.cpp"
     "src/ast/Exporters_DOT.cpp"
@@ -165,7 +166,7 @@ if (${ODBCOMPILER_TESTS})
         "tests/src/test_db_assignment.cpp"
         # "tests/src/test_db_arrays.cpp"
         "tests/src/test_db_command.cpp"
-        # "tests/src/test_db_conditional.cpp"
+        "tests/src/test_db_conditional.cpp"
         "tests/src/test_db_constant.cpp"
         "tests/src/test_db_func_call.cpp"
         "tests/src/test_db_func_decl.cpp"
