Adding Node::swapChild()

--- a/odb-compiler/CMakeLists.txt
+++ b/odb-compiler/CMakeLists.txt
@@ -114,6 +114,7 @@ add_library (odb-compiler ${ODBCOMPILER_LIB_TYPE}
     "src/ast/Label.cpp"
     "src/ast/Literal.cpp"
     "src/ast/Loop.cpp"
+    "src/ast/LValue.cpp"
     "src/ast/Node.cpp"
     "src/ast/SourceLocation.cpp"
     "src/ast/Statement.cpp"
@@ -123,9 +124,9 @@ add_library (odb-compiler ${ODBCOMPILER_LIB_TYPE}
     "src/ast/VarDecl.cpp"
     "src/ast/VarRef.cpp"
     "src/ast/Visitor.cpp"
-    "src/astpost/ErrorHighlighter.cpp"
     "src/astpost/Process.cpp"
     "src/astpost/ResolveArrayFuncAmbiguity.cpp"
+    "src/astpost/ResolveLabels.cpp"
     "src/commands/CommandLoader.cpp"
     "src/commands/ODBCommandLoader.cpp"
     "src/commands/DBPCommandLoader.cpp"
