Adding setParent() calls to swapChild()

--- a/odb-compiler/CMakeLists.txt
+++ b/odb-compiler/CMakeLists.txt
@@ -164,6 +164,7 @@ set_target_properties (odb-compiler
 
 if (${ODBCOMPILER_TESTS})
     add_executable (odbc_tests
+        "tests/src/astpost/test_astpost_resolve_labels.cpp"
         "tests/src/harness/ParserTestHarness.cpp"
         "tests/src/parser/test_db_parser_assignment.cpp"
         # "tests/src/test_db_arrays.cpp"
