UDT type declarations

--- a/odb-compiler/CMakeLists.txt
+++ b/odb-compiler/CMakeLists.txt
@@ -121,6 +121,8 @@ add_library (odb-compiler ${ODBCOMPILER_LIB_TYPE}
     "src/ast/Statement.cpp"
     "src/ast/Subroutine.cpp"
     "src/ast/Symbol.cpp"
+    "src/ast/UDTTypeDecl.cpp"
+    "src/ast/UDTTypeRef.cpp"
     "src/ast/UnaryOp.cpp"
     "src/ast/VarDecl.cpp"
     "src/ast/VarRef.cpp"
@@ -187,6 +189,7 @@ if (${ODBCOMPILER_TESTS})
         "tests/src/parser/test_db_parser_string_literal.cpp"
         "tests/src/parser/test_db_parser_subroutine.cpp"
         # "tests/src/test_db_udt.cpp"
+        "tests/src/parser/test_db_parser_udt_type_decl.cpp"
         "tests/src/parser/test_db_parser_var_decl.cpp"
         "tests/src/parser/test_db_parser_var_ref.cpp"
         "tests/src/parser/test_db_parser_cmd_matcher.cpp"
