--- a/odb-compiler/CMakeLists.txt
+++ b/odb-compiler/CMakeLists.txt
@@ -121,8 +121,8 @@ add_library (odb-compiler ${ODBCOMPILER_LIB_TYPE}
     "src/ast/Statement.cpp"
     "src/ast/Subroutine.cpp"
     "src/ast/Symbol.cpp"
-    "src/ast/UDTTypeDecl.cpp"
-    "src/ast/UDTTypeRef.cpp"
+    "src/ast/UDTDecl.cpp"
+    "src/ast/UDTRef.cpp"
     "src/ast/UnaryOp.cpp"
     "src/ast/VarDecl.cpp"
     "src/ast/VarRef.cpp"
