Clean up AST to IR implementation.

--- a/odb-compiler/CMakeLists.txt
+++ b/odb-compiler/CMakeLists.txt
@@ -136,8 +136,8 @@ add_library (odb-compiler ${ODBCOMPILER_LIB_TYPE}
     "src/commands/Command.cpp"
     "src/commands/CommandIndex.cpp"
     "src/commands/CommandMatcher.cpp"
+    "src/ir/ASTConverter.cpp"
     "src/ir/Codegen.cpp"
-    "src/ir/CreateFromAST.cpp"
     "src/ir/Node.cpp"
     "src/parsers/db/Driver.cpp"
     "src/parsers/db/ErrorPrinter.cpp")
