--- a/odb-compiler/CMakeLists.txt
+++ b/odb-compiler/CMakeLists.txt
@@ -6,6 +6,8 @@ include (GNUInstallDirs)
 include (TestVisibilityMacros)
 include (CheckIncludeFile)
 
+find_package(LLVM REQUIRED CONFIG)
+
 ###############################################################################
 # Configuration
 ###############################################################################
@@ -136,6 +138,8 @@ add_library (odb-compiler ${ODBCOMPILER_LIB_TYPE}
     "src/commands/Command.cpp"
     "src/commands/CommandIndex.cpp"
     "src/commands/CommandMatcher.cpp"
+    "src/ir/codegen/CodeGenerator.cpp"
+    "src/ir/codegen/TGCEngineInterface.cpp"
     "src/ir/semantic/ASTConverter.cpp"
     "src/ir/Codegen.cpp"
     "src/ir/Node.cpp"
@@ -171,6 +175,11 @@ set_target_properties (odb-compiler
         ARCHIVE_OUTPUT_DIRECTORY ${ODB_ARCHIVE_DIR}
         LIBRARY_OUTPUT_DIRECTORY ${ODB_LIBRARY_DIR}
         RUNTIME_OUTPUT_DIRECTORY ${ODB_RUNTIME_DIR})
+target_include_directories (odb-compiler PUBLIC ${LLVM_INCLUDE_DIRS})
+target_compile_definitions (odb-compiler PUBLIC ${LLVM_DEFINITIONS})
+llvm_map_components_to_libnames (llvm_libs core bitwriter x86codegen)
+target_link_directories (odb-compiler PUBLIC ${LLVM_LIBRARY_DIRS})
+target_link_libraries (odb-compiler PUBLIC ${llvm_libs})
 
 if (${ODBCOMPILER_TESTS})
     add_executable (odbc_tests
