Select/Case implemented

--- a/odb-compiler/CMakeLists.txt
+++ b/odb-compiler/CMakeLists.txt
@@ -116,6 +116,7 @@ add_library (odb-compiler ${ODBCOMPILER_LIB_TYPE}
     "src/ast/Loop.cpp"
     "src/ast/LValue.cpp"
     "src/ast/Node.cpp"
+    "src/ast/SelectCase.cpp"
     "src/ast/SourceLocation.cpp"
     "src/ast/Statement.cpp"
     "src/ast/Subroutine.cpp"
@@ -197,7 +198,7 @@ if (${ODBCOMPILER_TESTS})
         "tests/src/astpost/test_astpost_validate_udt_field_names.cpp"
         "tests/src/harness/ParserTestHarness.cpp"
         "tests/src/parser/test_db_parser_assignment.cpp"
-        # "tests/src/test_db_arrays.cpp"
+        "tests/src/parser/test_db_parser_arrays.cpp"
         "tests/src/parser/test_db_parser_array_decl.cpp"
         "tests/src/parser/test_db_parser_command.cpp"
         "tests/src/parser/test_db_parser_conditional.cpp"
@@ -213,7 +214,7 @@ if (${ODBCOMPILER_TESTS})
         "tests/src/parser/test_db_parser_loop_while.cpp"
         "tests/src/parser/test_db_parser_op_precedence.cpp"
         "tests/src/parser/test_db_parser_remarks.cpp"
-        # "tests/src/test_db_select.cpp"
+        "tests/src/parser/test_db_parser_select.cpp"
         "tests/src/parser/test_db_parser_string_literal.cpp"
         "tests/src/parser/test_db_parser_subroutine.cpp"
         "tests/src/parser/test_db_parser_udt_var_decl.cpp"
