--- a/odb-sdk/CMakeLists.txt
+++ b/odb-sdk/CMakeLists.txt
@@ -59,15 +59,15 @@ add_subdirectory ("plugins")
 install (
     TARGETS odb-sdk
     EXPORT OpenDarkBASICConfig
-    ARCHIVE DESTINATION ${CMAKE_INSTALL_ODBSDK_LIBDIR}
-    LIBRARY DESTINATION ${CMAKE_INSTALL_ODBSDK_LIBDIR}
-    RUNTIME DESTINATION ${CMAKE_INSTALL_ODBSDK_BINDIR})
+    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
 install (
     DIRECTORY "include/odb-sdk"
-    DESTINATION ${CMAKE_INSTALL_ODBSDK_INCLUDEDIR})
+    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 install (
     DIRECTORY "${PROJECT_BINARY_DIR}/include/odb-sdk"
-    DESTINATION ${CMAKE_INSTALL_ODBSDK_INCLUDEDIR})
+    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 install (
     EXPORT OpenDarkBASICConfig
     DESTINATION "share/odb/cmake")
