Making install RPATH absolute

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,9 +59,9 @@ set (ODB_ARCHIVE_DIR "${ODB_RUNTIME_DIR}/lib")
 set (ODB_SDK_ARCHIVE_DIR "${ODB_SDK_DIR}/lib")
 
 set (CMAKE_INSTALL_BINDIR "${CMAKE_INSTALL_PREFIX}")
-set (CMAKE_INSTALL_LIBDIR "lib")
-set (CMAKE_INSTALL_INCLUDEDIR "include")
-set (CMAKE_INSTALL_ODBSDKDIR "odb-sdk")
+set (CMAKE_INSTALL_LIBDIR "${CMAKE_INSTALL_BINDIR}/lib")
+set (CMAKE_INSTALL_INCLUDEDIR "${CMAKE_INSTALL_BINDIR}/include")
+set (CMAKE_INSTALL_ODBSDKDIR "${CMAKE_INSTALL_BINDIR}/odb-sdk")
 
 set (INSTALL_GTEST OFF CACHE BOOL "")
 
