--- a/odb-cli/CMakeLists.txt
+++ b/odb-cli/CMakeLists.txt
@@ -26,7 +26,7 @@ target_link_libraries (odbc
 set_target_properties (odbc
     PROPERTIES
         RUNTIME_OUTPUT_DIRECTORY ${ODB_RUNTIME_DIR}
-        INSTALL_RPATH "lib")
+        INSTALL_RPATH ${CMAKE_INSTALL_LIBDIR})
 
 ###############################################################################
 # Installation
