fixes #56 #58 - Implemented Node::toString(), removing *Symbol variants for labels/functions

--- a/odb-compiler/CMakeLists.txt
+++ b/odb-compiler/CMakeLists.txt
@@ -161,6 +161,7 @@ add_library (odb-compiler ${ODBCOMPILER_LIB_TYPE}
     "${Gperf_DarkBASICKeywordToken_OUTPUTS}"
     "${BISON_CommandsParser_OUTPUTS}"
     "${FLEX_CommandsScanner_OUTPUTS}"
+    "src/ast/ArgList.cpp"
     "src/ast/ArrayDecl.cpp"
     "src/ast/ArrayRef.cpp"
     "src/ast/Assignment.cpp"
@@ -173,10 +174,10 @@ add_library (odb-compiler ${ODBCOMPILER_LIB_TYPE}
     "src/ast/Exporters_DOT.cpp"
     "src/ast/Exporters_JSON.cpp"
     "src/ast/Expression.cpp"
-    "src/ast/ExpressionList.cpp"
     "src/ast/FuncCall.cpp"
     "src/ast/FuncDecl.cpp"
     "src/ast/Goto.cpp"
+    "src/ast/InitializerList.cpp"
     "src/ast/Label.cpp"
     "src/ast/Literal.cpp"
     "src/ast/Loop.cpp"
@@ -197,8 +198,6 @@ add_library (odb-compiler ${ODBCOMPILER_LIB_TYPE}
     "src/astpost/EliminateBitwiseNotRHS.cpp"
     "src/astpost/EnforceSingleDefaultCase.cpp"
     "src/astpost/Process.cpp"
-    "src/astpost/ResolveArrayFuncAmbiguity.cpp"
-    "src/astpost/ResolveLabels.cpp"
     "src/astpost/ValidateUDTFieldNames.cpp"
     "src/commands/CommandLoader.cpp"
     "src/commands/ODBCommandLoader.cpp"
@@ -275,8 +274,6 @@ target_compile_definitions (odb-compiler PUBLIC ${LLVM_DEFINITIONS})
 if (${ODBCOMPILER_TESTS})
     add_executable (odbc_tests
         "tests/src/astpost/test_astpost_eliminate_bitwise_not_rhs.cpp"
-        "tests/src/astpost/test_astpost_resolve_array_func_ambiguity.cpp"
-        "tests/src/astpost/test_astpost_resolve_labels.cpp"
         "tests/src/astpost/test_astpost_validate_udt_field_names.cpp"
         "tests/src/commands/test_cmd_matcher.cpp"
         "tests/src/harness/ParserTestHarness.cpp"
